Implement bounce suppression in ScrollAnchor.

An element can "bounce", by making the inverse of its last movement, when a
scroll anchoring adjustment interacts with a scroll event handler that changes
layout at a scroll offset threshold.

ScrollAnchor now detects bounces by tracking the most recent adjustment and the
element that triggered it (even if we have anchored to a different element since
then), and suppresses repeat bounces.

BUG=598233,601906,603376

Review-Url: https://codereview.chromium.org/1971423002
Cr-Commit-Position: refs/heads/master@{#394552}

Former-commit-id: 2fd28b5102e73c49b3891d9bc7c05ffda979e2ea